[project]
name = "tmuxctl"
version = "0.1.0"
description = "Small tmux session controller with recurring sends"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1",
]

[project.scripts]
tmuxctl = "tmuxctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
