[project]
name = "tmuxctl"
version = "0.1.0"
description = "Small tmux session controller with recurring sends"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alexey Grigorev" },
]
keywords = ["tmux", "cli", "scheduler", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12,<1",
]

[project.scripts]
tmuxctl = "tmuxctl.cli:main"

[project.urls]
Homepage = "https://github.com/alexeygrigorev/tmuxctl"
Issues = "https://github.com/alexeygrigorev/tmuxctl/issues"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
